<resources>
    <string name="app_name">RTCMS Client</string>

    <string-array name="navigation_array">
        <item>Command Centre</item>
        <item>Messages</item>
        <item>History</item>
        <item>Job</item>
        <item>Map</item>
        <item>User Profile</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <string name="hello_world">RTCMS Android Client App</string>

    <string name="action_settings">Settings</string>

    <!-- COLUMN #1 -->
    <string name="clear">Clear</string>
    <string name="soon_to_clear">Soon to clear</string>
    <string name="no_job">No Job</string>
    <string name="start">Start</string>
    <string name="ring_back">Ring back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="directions">Directions</string>
    
    <!-- COLUMN #2 -->
    <string name="status">Status</string>
    <string name="recover">Recover</string>
    <string name="picked_up">Picked Up</string>
    <string name="finish">Finish</string>
    <string name="destination_changed">Destination changed</string>
    <string name="short_break">Short break: \n10 mins</string>
    <string name="medium_break">Medium break: \n20 mins</string>
    <string name="long_break">Long break: \n30 mins</string>
    
    <string name="emergency">Emergency</string>
    
    <!-- SETTINGS ACTIVITY STRING -->
    <string name="settings_activity_label">Settings</string>
    
    <!-- PHONE NUMER CHANGE DIALOG -->
    <string name="dialog_title">Enter new phone number</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    
    <!-- DEMO DIALOG -->
    <string name="demo_dialog_title">DEMO VERSION</string>
    <string name="demo_dialog_textview_text">DEMO VERSION</string>
    <string name="demo_dialog_button_text">Click to continue</string>
    
    <!-- PASSWORD DIALOG -->
    <string name="password_dialog_title">Security</string>
    <string name="password_dialog_textview_text">Please, enter password to get access to phone number.</string>
    <string name="password_dialog_button_text">OK</string>
    
    <!-- ABOUT ACTIVITY -->
    <string name="about_app_version">Version 1.0</string>
    <string name="about_author"><u>Copyright 2015 by I.D</u></string>
</resources>
