<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:IDLib="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/commandCentreContainerId"
    style="?layoutBackgroundStyle">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <com.vodiytechnologies.rtcmsclient.TypefacedTextView
            android:id="@+id/currentStatusTextViewId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_size"
            android:gravity="center"
            IDLib:fontNameForButton="@string/Roboto_Bold"
            android:textSize="@dimen/status_text_size"
            android:background="@color/status_backgroud_color"
            android:text="No Job"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <!-- COLUNM #1 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".50"
                android:orientation="vertical">
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_clear"
                    android:text="@string/clear"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_soon"
                    android:text="@string/soon_to_clear"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_no_job"
                    android:text="@string/no_job"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_start"
                    android:text="@string/start"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_ringback"
                    android:text="@string/ring_back"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_yes"
                    android:text="@string/yes"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_no"
                    android:text="@string/no"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_directions"
                    android:text="@string/directions"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
            </LinearLayout>
            <!-- END COLUMN #1 -->
            <!-- ############# -->
            <!-- COLUNM #2 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".50"
                android:orientation="vertical">
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_status"
                    android:text="@string/status"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_recover"
                    android:text="@string/recover"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_picked_up"
                    android:text="@string/picked_up"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_finish"
                    android:text="@string/finish"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_dest_changed"
                    android:text="@string/destination_changed"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_shortbreak"
                    android:text="@string/short_break"
                    android:textSize="@dimen/button_text_smaller_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_mediumbreak"
                    android:text="@string/medium_break"
                    android:textSize="@dimen/button_text_smaller_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
                <com.vodiytechnologies.rtcmsclient.TypefacedButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:id="@+id/button_longbreak"
                    android:text="@string/long_break"
                    android:textSize="@dimen/button_text_smaller_size"
                    android:gravity="center"
                    IDLib:fontNameForButton="@string/Roboto_Bold"
                    style="?taskButtonStyle"
                    android:onClick="onButtonClick"/>
            </LinearLayout>
            <!-- END COLUMN #2 -->
        </LinearLayout>
        <!-- EMERGENCY BUTTON -->
        <com.vodiytechnologies.rtcmsclient.TypefacedButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_size"
            android:id="@+id/button_emergency"
            android:text="@string/emergency"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            IDLib:fontNameForButton="@string/Roboto_Bold"
            style="?emergencyButtonStyle"/>
    </LinearLayout>

</ScrollView >